Fix for text covering navigation bar

--- a/css/style.css
+++ b/css/style.css
@@ -3,42 +3,7 @@ body {
 }
 
 
-.navigation {
-    background-color: #333;
-    position: fixed;
-    overflow: hidden;
-    width: 100%;
-}
 
-.navigation a {
-    float: right;
-    color: #fff;
-    text-align: center;
-    padding-bottom: 20px;
-    padding-top: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-    font-size: 20px;
-    font-family: sans-serif;
-    text-decoration: none;
-}
-
-.navigation img {
-    width: 25px;
-    height: 25px;
-    float: left;
-    padding: 20px;
-}
-
-.navigation h1 {
-    font-size: 20px;
-    float: left;
-    padding: 10px;
-    padding-left: 50px;
-    font-family: sans-serif;
-    color: #fff;
-
-}
 
 .footer {
     left: 0;
@@ -103,3 +68,40 @@ text-align: justify;
   background-color:rgba(0,0,0,0.7);
 }
 
+.navigation {
+    background-color: #333;
+    position: fixed;
+    overflow: hidden;
+    z-index: 99999;
+    width: 100%;
+}
+
+.navigation a {
+    float: right;
+    color: #fff;
+    text-align: center;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 20px;
+    font-family: sans-serif;
+    text-decoration: none;
+}
+
+.navigation img {
+    width: 25px;
+    height: 25px;
+    float: left;
+    padding: 20px;
+}
+
+.navigation h1 {
+    font-size: 20px;
+    float: left;
+    padding: 10px;
+    padding-left: 50px;
+    font-family: sans-serif;
+    color: #fff;
+
+}
